--- a/nifi-amqp-processor/pom.xml
+++ b/nifi-amqp-processor/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.apache.nifi</groupId>
         <artifactId>nifi-amqp-bundle</artifactId>
-        <version>0.1.0-incubating</version>
+        <version>0.2.1</version>
     </parent>
     <groupId>org.apache.nifi</groupId>
     <artifactId>nifi-amqp-processor</artifactId>
